[package]
name = "pancakeswap-v2-router-demo"
version = "0.1.0"
edition = "2021"
default-run = "pancakeswap-v2-router-demo"

[dependencies]
# Ethereum and blockchain interaction
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
eyre = "0.6"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For handling big numbers and hex encoding
hex = "0.4"

# For time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging (optional but useful for debugging)
tracing = "0.1"
tracing-subscriber = "0.3"

# For spawning anvil process
tempfile = "3.0"

[dev-dependencies]
# Additional dependencies for testing
tokio-test = "0.4"
